Fix contact input width too big on iPhone

--- a/client/less/theme1.less
+++ b/client/less/theme1.less
@@ -315,6 +315,10 @@ small size views
     width:100%;
 
   }
+  .ContactInput__Input {
+    border-radius:.3rem;
+    width:90%;
+  }
 }
 
 
